devopssong/example/ngf-redirect-rewrite/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gw
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    hostname: "*.devopssong.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            kubernetes.io/metadata.name: demo
