devopssong/example/ngf-redirect-rewrite/rewrite-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-route
  namespace: demo
spec:
  parentRefs:
    - name: default-gw
      namespace: nginx-gateway
  hostnames:
  - rewrite.devopssong.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-hello-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /delete
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /
    backendRefs:
    - name: nginx-hello-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /annyeong
    backendRefs:
    - name: nginx-hello-svc
      port: 80
